# HALvesting

./: .buildinfo  .gitignore  LICENSE  README.md  about.html  enrich_data.py  enrish.py  fetch_data.py  filter_data.py  genindex.html  index.html  installation.html  merge_data.py  objects.inv  overview.html  postprocess_data.py  py-modindex.html  pyproject.toml  quickstart.html  requirements-build.txt  requirements-dev.txt  requirements.txt  run_experiments.py  search.html  searchindex.js
.doctrees/: about.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  quickstart.doctree
.github/workflows/: build_deploy.yml
_modules/: index.html
_sources/: about.md.txt  index.rst.txt  installation.md.txt
data/: lang_to_iso.json  stopwords.json
docs/: conf.py  index.rst  overview.md  quickstart.md
halversting/: __init__.py
halversting/api/: __init__.py  hal.py
halversting/utils/: __init__.py
halvesting/: __init__.py
halvesting/api/: __init__.py  hal.py
halvesting/experiments/: __init__.py  counter.py  raw_counter.py
halvesting/services/: __init__.py  api.html  api.py  downloader.html  downloader.py  enricher.html  enricher.py  enrisher.py  filtering.html  filtering.py  merger.html  merger.py
halvesting/utils/: __init__.py  arg_parse.py  helper.py  kenlm_utils.html  kenlm_utils.py  logger.py  service_utils.py  (+2 more)
scripts/: enrich_data.sbatch  enrich_data.sh  enrish.sh  fetch_data.sh  filter_data.sbatch  filter_data.sh  merge_data.sh  postprocess_data.sh  run_experiments.sbatch  run_experiments.sh
tests/: test_preprocessing.py
(+36 files in other folders)
