[tool.poetry]
name = "halvesting"
version = "0.1.0"
description = "Harvests open scientific papers from HAL."
authors = ["Madjakul <francis.kulumba@inria.fr>", "WissamAntoun <wissam.antoun@inria.fr>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
lxml = "^5.1.0"
tqdm = "^4.66.2"
datasets = "^2.18.0"
nltk = "^3.8.1"
torch = "^2.2.1"
transformers = "^4.39.0"
wandb = "^0.16.4"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"
msgpack = "^1.0.8"
black = "^24.3.0"
dockformatter = "^1.7.5"
isort = "^5.13.2"
pytest = "^8.1.1"
coverage ="^7.4.3"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
lxml = "^5.1.0"
tqdm = "^4.66.2"
datasets = "^2.18.0"
nltk = "^3.8.1"
torch = "^2.2.1"
transformers = "^4.39.0"
wandb = "^0.16.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.3"
black = "^24.3.0"
dockformatter = "^1.7.5"
isort = "^5.13.2"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
lxml = "^5.1.0"
tqdm = "^4.66.2"
datasets = "^2.18.0"
nltk = "^3.8.1"
torch = "^2.2.1"
transformers = "^4.39.0"
wandb = "^0.16.4"

[tool.poetry.group.docs.dependencies]
sphinx="^7.2.6"
sphinx-rtd-theme = "^2.0.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
lxml = "^5.1.0"
tqdm = "^4.66.2"
datasets = "^2.18.0"
nltk = "^3.8.1"
wandb = "^0.16.4"
torch = "^2.2.1"
transformers = "^4.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
